--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: #f9f8d6; /* Light yellow */
+    background-color: #f9f8d6;
     position: fixed;
     width: 100%;
     height: 3em;
@@ -13,6 +13,7 @@
     font-size: 2em;
   }
   
+  /* For the smaller, gray middle word */
   .titleSub {
     font-size: .9em;
     color: gray;
