Added CardDisplay based on Product Cards. Made a 3-column grid.

--- a/src/Components/CardDisplay/CardDisplay.module.css
+++ b/src/Components/CardDisplay/CardDisplay.module.css
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr); /* Grid layout with 3 equal columns. 1 fr = 1 fraction (equal portion of screen)*/
     row-gap: 100px; /* Gap between grid rows */
+    padding-top: 1em; /* Space between top of grid and Header */
     padding-bottom: 1em; /* Space between bottom of grid and bottom of screen */
     width: 100%;
     flex-wrap: wrap;
