--- a/src/Components/ControlBar/ControlBar.module.css
+++ b/src/Components/ControlBar/ControlBar.module.css
@@ -1,5 +1,5 @@
 .controlBar {
-    background-color: #d1e8e2; /* Pale blue */
+    background-color: #d1e0e8;
     position: sticky;
     display: flex;
     justify-content: space-between;
