Added JSDoc comments. Ran Prettier on each file. Deleted an unneeded CSS file.

--- a/src/Components/CardDisplay/CardDisplay.module.css
+++ b/src/Components/CardDisplay/CardDisplay.module.css
@@ -1,13 +1,15 @@
 .cardDisplay {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr); /* Grid layout with 3 equal columns. 1 fr = 1 fraction (equal portion of screen)*/
-    row-gap: 100px; /* Gap between grid rows */
-    padding-top: 1em; /* Space between top of grid and Header */
-    padding-bottom: 1em; /* Space between bottom of grid and bottom of screen */
-    width: 100%;
-    flex-wrap: wrap;
-    margin: 0 auto;
-    justify-items: center; /* Centers cards in grid */
-  }
-  
-  
+  /* Container for product cards, laid out as a 3-column grid. */
+  display: grid;
+  grid-template-columns: repeat(
+    3,
+    1fr
+  ); /* Grid layout with 3 equal columns. 1 fr = 1 fraction (equal portion of screen)*/
+  row-gap: 100px; /* Gap between grid rows */
+  padding-top: 1em; /* Space between top of grid and Header */
+  padding-bottom: 1em; /* Space between bottom of grid and bottom of screen */
+  width: 100%;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  justify-items: center; /* Centers cards in grid */
+}
