--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,14 +1,19 @@
+/**
+ * @module App.module.css
+ */
+
+/* The root container for the app, using flex for layout and filling the viewport height */
 .app {
-    display: flex;
-    flex-direction: column;
-    height: 100vh; 
-    overflow: hidden; 
-  }
-  
-  .main {
-    background-color: #d1e0e8;
-    flex-grow: 1;
-    overflow: auto;
-    margin-top: 3em; /* Kludge to keep stuff from going behind the fixed header */
-  }
-  
+  display: flex;
+  flex-direction: column;
+  height: 100vh; 
+  overflow: hidden; 
+}
+
+/* The main content area, with a specific background color, allowing it to grow to fill available space, and set to auto overflow */
+.main {
+  background-color: #d1e0e8;
+  flex-grow: 1;
+  overflow: auto;
+  margin-top: 3em; /* Offset to account for the fixed header */
+}
