--- a/src/Components/BrandSelect/BrandSelect.module.css
+++ b/src/Components/BrandSelect/BrandSelect.module.css
@@ -1,13 +1,14 @@
 .brandSelect {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: auto;
-    background-color: #d1e8e2;
-    margin-top: 1em;
-  }
-  
-  .instructions {
-    font-size: 0.8em;
-    color: #333;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: auto;
+  background-color: #d1e8e2;
+  margin-top: 1em;
+}
+
+.instructions {
+  /* Styling for the instructions text under the dropdown. */
+  font-size: 0.8em;
+  color: #333;
+}
